--- a/MyFirstApp/package.json
+++ b/MyFirstApp/package.json
@@ -17,6 +17,7 @@
     "babelify": "^7.3.0",
     "bootstrap": "^3.3.7",
     "css-loader": "^0.23.1",
+    "file-loader": "^0.9.0",
     "jquery": "^3.0.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
